@@ -1,5 +1,7 @@
 package org.api.workaround.validation;
 
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.api.workaround.exception.FileValidationException;
 import org.api.workaround.util.FileConverter;
 import org.junit.jupiter.api.Tag;
@@ -13,7 +15,8 @@ import static org.junit.jupiter.api.Assertions.*;
 @Tag("unit")
 public class RarValidationTest {
 
-    private final static String PATH = "src/test/example/validation";
+    private final static String PATH = "src/test/resources/validation";
+    private final static Logger log = LogManager.getLogger(RarValidationTest.class);
 
     @Test
     void shouldThrowIfFileIsInvalidAndEmpty() throws IOException {
@@ -31,9 +34,8 @@ public class RarValidationTest {
         final var file = new File(PATH + "/" + "test_1mb_v5.rar");
         var mtFile = FileConverter.convertFileToMultipartFile(file);
         var ex = assertThrows(FileValidationException.class, () -> RarValidation.validate(mtFile));
-        assertEquals(2, ex.getErrors().size());
-        assertEquals("Oops! File type needs to be a .RAR or .CBR!", ex.getErrors().get(0));
-        assertEquals("Invalid file! Make sure you're extracting V4 .RAR/.CBR or lower.", ex.getErrors().get(1));
+        assertEquals(1, ex.getErrors().size());
+        assertEquals("Invalid file! Make sure you're extracting V4 .RAR/.CBR or lower.", ex.getErrors().getFirst());
     }
 
     @Test
@@ -45,5 +47,13 @@ public class RarValidationTest {
         );
         assertEquals(1, ex.getErrors().size());
         assertEquals("Oops! File cannot be null!", ex.getErrors().getFirst());
+    }
+
+    @Test
+    void shouldNotThrowIfFileIsValid() throws IOException {
+        final var file = new File(PATH + "/" + "rar4.rar");
+        log.info("File: {}", file.getName());
+        var mtFile = FileConverter.convertFileToMultipartFile(file);
+        assertDoesNotThrow(() -> RarValidation.validate(mtFile));
     }
 }
